RGMainStack.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Creates the Role, InstanceProfile and EC2Instance for Research Gateway
Parameters:
  AdminPassword:
    Description: Admin password for MongoDB for this instance of Research Gateway
    NoEcho: "true"
    Type: String
    Default: ""
    ConstraintDescription: Admin password
  UserPassword:
    Description: User password for RG App to connect to MongoDB
    NoEcho: "true"
    Type: String
    Default: ""
    ConstraintDescription: Admin password
  AccessFromCidr:
    Description: Lockdown SSH and HTTPS access (default can be accessed from anywhere)
    Type: String
    Default: 0.0.0.0/0
    MinLength: "9"
    MaxLength: "18"
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid CIDR range of the form x.x.x.x/x.
  RGUrl:
    Description: URL at which this instance of Research Gateway can be reached. e.g. myrg.example.com
    Type: String
    Default: ""
    ConstraintDescription: RG URL
  UserPoolId:
    Description: UserPoolId of the Cognito UserPool created for this instance of Research Gateway
    Type: String
    Default: ""
    ConstraintDescription: User Pool Id
  ClientId:
    Description: ClientId of the Cognito UserPool created for this instance of Research Gateway
    Type: String
    Default: ""
    ConstraintDescription: ClientId
  CFTBucketName:
    Description: Bucket that is created to hold CFT templates used by Research Gateway
    Type: String
    Default: ""
    ConstraintDescription: Bucket Name
  VPC:
    Description: The VPC in which the EC2 instance will reside
    Type: AWS::EC2::VPC::Id
  Subnet1:
    Description: The VPC subnet in which the EC2 instance
    Type: AWS::EC2::Subnet::Id
  KeyName1:
    Description: Keypair name for SSH access
    Type: AWS::EC2::KeyPair::KeyName
Resources:
  RGPortalRole:
    Type: AWS::IAM::Role
    Properties:
      Description: The role used by the EC2 Instance running the portal
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonS3FullAccess
        - arn:aws:iam::aws:policy/AmazonCognitoPowerUser
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/service-role/AWSAppRunnerServicePolicyForECRAccess
        - arn:aws:iam::aws:policy/IAMReadOnlyAccess
        - arn:aws:iam::aws:policy/AmazonRoute53FullAccess
        - Ref: ResearchGatewayRolePolicy
      Path: /
  ResearchGatewayInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - Ref: RGPortalRole
  ResearchGatewayRolePolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: RG-Portal-Base-Account-Policy
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - config:*
              - ec2:ModifyInstanceMetadataOptions
              - iam:attachRolePolicy
              - iam:createPolicy
              - iam:createRole
              - iam:deletePolicy
              - iam:deletePolicyVersion
              - iam:detachRolePolicy
              - iam:updateAssumeRolePolicy
              - ses:*
              - sns:*
              - sts:AssumeRole
              - cloudformation:*
            Resource: '*'
  RGPortalSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for RGPortal instances
      VpcId:
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp:
            Ref: AccessFromCidr
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp:
            Ref: AccessFromCidr
      Tags:
        - Key: Name
          Value:
            Fn::Sub: ${AWS::StackName}-SecurityGroup
  RGEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0180756fef642e0b5
      InstanceType: t2.medium
      Monitoring: "true"
      DisableApiTermination: "false"
      IamInstanceProfile:
        Ref: ResearchGatewayInstanceProfile
      KeyName:
        Ref: KeyName1
      SubnetId:
        Ref: Subnet1
      SecurityGroups:
        - Ref: RGPortalSG
      UserData:
        Fn::Base64:
          Fn::Join:
            - ' '
            - - |
                #!/bin/bash
              - |
                exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
              - |
                echo 'Fixing IPs'
              - |
                fixips.sh
              - |
                echo 'Fixing Mongo'
              - fixmongo.sh
              - PROD-cc
              - Ref: AdminPassword
              - rguser
              - Ref: UserPassword
              - Ref: RGUrl
              - |2+
              - |
                tar -xvf /home/ubuntu/config.tar.gz -C /opt/deploy/sp2
              - |
                echo 'Fixing Configs'
              - export RG_HOME='/opt/deploy/sp2' && fixconfigs.sh
              - Ref: UserPoolId
              - Ref: ClientId
              - Ref: CFTBucketName
              - rguser
              - Ref: UserPassword
              - Ref: RGUrl
              - |2+
              - |
                echo 'Login to ECR'
              - |
                aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 045938549113.dkr.ecr.us-east-2.amazonaws.com
